--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -101,5 +101,9 @@
   "OUR CLIENT SAY": "عملاؤنا تقول",
   "Sorry Your Page Is Not Found ....": "عفوا الصفحه غير موجوده او حدث خطا ما حاول مره اخرى",
   "ELEVATE YOUR WORKOUT STRATEGY WITH A PERSONAL TRAINER": "ارفع مستوى تمرينك مع مدرب شخصي",
-  "Contact A Personal Trainer": "تواصل مع مدربك الشخصي"
+  "Contact A Personal Trainer": "تواصل مع مدربك الشخصي",
+  "Your personal trainer is not just a coach, but your partner in every step towards a better, healthier you.": "المدرب الشخصي مش بس مدرب، ده شريك في كل خطوة ناحيّة نسخة أفضل وأصحّ من نفسك.",
+  "Behind every transformation, there’s a personal trainer who believed in you before you believed in yourself.": "ورا كل تغيير حقيقي، في مدرب شخصي كان مؤمن بيك قبل ما تكون مؤمن بنفسك.",
+  "Strength training isn't just about lifting weights – it's about lifting your confidence, resilience, and power in life.": "تدريب القوة مش مجرد رفع أوزان، ده رفع لثقتك، وصمودك، وقوتك في الحياة.",
+  "Bodybuilding is an art – your body is the canvas, and every rep is a brushstroke shaping a masterpiece.": "كمال الأجسام هو فن، وجسمك هو اللوحة، وكل عدة هي لمسة فرشاة بتشكل تحفة فنية."
 }
