--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -100,5 +100,9 @@
   "OUR CLIENT SAY": "OUR CLIENT SAY",
   "Sorry Your Page Is Not Found ....": "Sorry Your Page Is Not Found ....",
   "ELEVATE YOUR WORKOUT STRATEGY WITH A PERSONAL TRAINER": "ELEVATE YOUR WORKOUT STRATEGY WITH A PERSONAL TRAINER",
-  "Contact A Personal Trainer": "Contact A Personal Trainer"
+  "Contact A Personal Trainer": "Contact A Personal Trainer",
+  "Your personal trainer is not just a coach, but your partner in every step towards a better, healthier you.": "Your personal trainer is not just a coach, but your partner in every step towards a better, healthier you.",
+  "Behind every transformation, there’s a personal trainer who believed in you before you believed in yourself.": "Behind every transformation, there’s a personal trainer who believed in you before you believed in yourself.",
+  "Strength training isn't just about lifting weights – it's about lifting your confidence, resilience, and power in life.": "Strength training isn't just about lifting weights – it's about lifting your confidence, resilience, and power in life.",
+  "Bodybuilding is an art – your body is the canvas, and every rep is a brushstroke shaping a masterpiece.": "Bodybuilding is an art – your body is the canvas, and every rep is a brushstroke shaping a masterpiece."
 }
